kubernetes/apps/gitea/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-anubis
spec:
  hostnames: ["git.${SECRET_DOMAIN}"]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-anubis
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames: ["git.${SECRET_DOMAIN}"]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
