kubernetes/apps/gitea/forgejo/app/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
